--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 mask_rcnn_coco.h5 filter=lfs diff=lfs merge=lfs -text
 mask_rcnn_count_0000.h5 filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
